fix: Long file names causing wrapping issues on mobile.

--- a/main.css
+++ b/main.css
@@ -62,6 +62,7 @@ body
   min-width: 20rem;
 
   font-family: 'Anonymous Pro', monospace;
+  word-wrap: break-word;
 }
 img
 {
